--- a/blog.html
+++ b/blog.html
@@ -123,7 +123,7 @@
         incidunt ratione dolore ut assumenda! Illo voluptas distinctio at
         aperiam impedit.
       </p>
-    </div>
+    </div  id="article-13">
     <div>
       <h2>Статья 13</h2>
       <p>
